❄️🗃 Updated with Glitch

--- a/results.html
+++ b/results.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+     <a class="navbar-brand font1 text-warning" href="./index.html">CovAid</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -88,7 +88,7 @@
             The Kezar Stadium is one location that is hosting a food drive. It
             opens from 12pm-4pm, and onsite registration is required.
           </p>
-          <a href="#" class="btn btn-primary">Find out more</a>
+          <a href="./resource1.html" class="btn btn-primary">Find out more</a>
         </div>
       </div>
 
@@ -104,12 +104,14 @@
           <h5 class="card-title">Embarcadero</h5>
           <p class="card-text">
             Embarcadero is one of many places that offers free COVID testing.
-            It's open 7 days a week, from 8am-6pm. Booking an appointemnt
+            It's open 7 days a week, from 8am-6pm. Booking an appointment
             beforehand is requred.
           </p>
-          <a href="#" class="btn btn-primary">Find out more</a>
+          <a 
+             href="./resource2.html" class="btn btn-primary">Find out more</a>
         </div>
       </div>
+      
 
       <div class="card mb-3">
         <img
@@ -120,13 +122,13 @@
           alt="Card image cap"
         />
         <div class="card-body">
-          <h5 class="card-title">Food and supplies donations</h5>
+          <h5 class="card-title">Food Runners</h5>
           <p class="card-text">
             Food Runners is an organization that takes food people donate and
-            gives them to those in need. Their adress is 2579 Washington St, San
+            gives them to those in need. Their address is 2579 Washington St, San
             Francisco, CA 94115 (415) 282-1900.
           </p>
-          <a href="#" class="btn btn-primary">Find out more</a>
+          <a href="./resource3.html" class="btn btn-primary">Find out more</a>
         </div>
       </div>
     </div>
