--- a/Option.html
+++ b/Option.html
@@ -36,7 +36,7 @@
 </html>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand font1 text-warning" href="./index.html">CovAid</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -83,6 +83,7 @@
       h3 {
         margin: 50px;
         text-align: center;
+        font-family: "Castoro", serif;
       }
     </style>
   </head>
@@ -93,6 +94,7 @@
       p {
         margin: 30px;
         font-size: large;
+        font-family: "Castoro", serif;
       }
     </style>
 
