😬🌵 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-<link rel="stylesheet" media="screen" href="http://fontlibrary.org/face/ravali" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/ravali" type="text/css"/>
 
     <!-- import the webpage'sc\ javascript file -->
     <script
