💷⛈ Updated with Glitch

--- a/Option.html
+++ b/Option.html
@@ -113,7 +113,7 @@
         title="Food drives usally supply people with free food. There are plenty more that had opened up during this pandamic."
       >
         <a
-          href="https://ash-butternut-dimple.glitch.me/results.html"
+          href="./results.html"
           class="btn btn-secondary"
           >Food Drives/Giveaways</a
         >
@@ -144,7 +144,7 @@
         title="During this pandemic, it's important for people to get the medical help they need. Most hospitals are opened, and plenty of them are treating COVID patients."
       >
         <a
-          href="https://ash-butternut-dimple.glitch.me/results.html"
+          href="./results.html"
           class="btn btn-secondary"
           >Medical Assistance</a
         >
@@ -175,7 +175,7 @@
         title="Other than food drives, there are also places giving away masks and other supplies to keep you safe from COVID."
       >
         <a
-          href="https://ash-butternut-dimple.glitch.me/results.html"
+          href="./results.html"
           class="btn btn-secondary"
           >Other Resources</a
         >
@@ -206,7 +206,7 @@
         title="If you have extra resources, don't hesitate to help! Click here for a list of places that you could donate to, or volunteer at."
       >
         <a
-          href="https://ash-butternut-dimple.glitch.me/results.html"
+          href="./results.html"
           class="btn btn-secondary"
           >Donate</a
         >
