🐽📌 Updated with Glitch

--- a/resource1.html
+++ b/resource1.html
@@ -158,7 +158,7 @@
         }
       </style>
       <p>
-        Kesar Stadium had opened up during this pandemic as a food back.
+        Kesar Stadium had opened up during this pandemic as a food bank.
         There'll be volunteers there to manage the lines, assist with the
         check-in, and package the food. You would need to wear a face mask, and
         closed toed shoes. Please be aware that this food bank is outside, and
