--- a/resource2.html
+++ b/resource2.html
@@ -162,7 +162,7 @@
         had opened up for free Covid testing. The location is opened 7 Days a
         week: 8am-6pm. An appointment is required, and that can be made online
         or through a phone call. You do not need an doctor's note nor medical
-        insurence to get tested. Results are usally avaliable in 2-5 days. For
+        insurance to get tested. Results are usually available in 2-5 days. For
         more information click
         <a href="https://sf.gov/find-out-about-your-covid-19-testing-options"
           >here.</a
