--- a/results.html
+++ b/results.html
@@ -105,7 +105,7 @@
           <p class="card-text">
             Embarcadero is one of many places that offers free COVID testing.
             It's open 7 days a week, from 8am-6pm. Booking an appointment
-            beforehand is requred.
+            beforehand is required.
           </p>
           <a 
              href="./resource2.html" class="btn btn-primary">Find out more</a>
