--- a/resource1.html
+++ b/resource1.html
@@ -79,7 +79,7 @@
       </div>
     </nav>
 
-    <h1 class="display-3 text-center text-dark bg-warning ">Kesar Stadium</h1>
+    <h1 class="display-3 text-center text-dark bg-warning ">Kezar Stadium</h1>
 
     <div
       id="carouselExampleIndicators"
@@ -158,7 +158,7 @@
         }
       </style>
       <p>
-        Kesar Stadium had opened up during this pandemic as a food bank.
+        Kezar Stadium had opened up during this pandemic as a food bank.
         There'll be volunteers there to manage the lines, assist with the
         check-in, and package the food. You would need to wear a face mask, and
         closed toed shoes. Please be aware that this food bank is outside, and
