📍🎋 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <div class="cardmove card">
       <h4 class="card-header bg-warning text-center">
-        What we do with your location
+        What we do with your location?
       </h4>
       <div class="card-body container">
         <div>
