🎷🍕 Updated with Glitch

--- a/resource2.html
+++ b/resource2.html
@@ -144,11 +144,8 @@
       <h4 class="font-weight-bold">
         What does this place offer?
       </h4>
-      <img
-        class="d-block w-100"
-        src="https://cdn.glitch.com/51decddb-9663-4453-b89b-6e82b64382c0%2Fthumbnails%2FScreen%20Shot%202020-12-02%20at%205.37.55%20PM.png?1606959566505"
-        alt="Third slide"
-      />
+            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d25222.40612243613!2d-122.41449616095964!3d37.79470866684833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x80858066993643ad%3A0x77178399d59a1e7f!2sEmbarcadero%2C%20San%20Francisco%2C%20CA!3m2!1d37.7992627!2d-122.3976732!5e0!3m2!1sen!2sus!4v1607560542024!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
       <style>
         p {
           line-height: 1.6;
