--- a/results.html
+++ b/results.html
@@ -69,7 +69,7 @@
     </nav>
 
     <div>
-      <h1 class="display-1 color text-center bg-warning">
+      <h1 class="display-1 color text-center bg-warning font2">
         Your Results Are...
       </h1>
     </div>
